[package]
name = "digital-duration-nom"
version = "0.5.0"
authors = ["Clifford T. Matthews <clifford.t.matthews@gmail.com>>"]
edition = "2021"

[dependencies]
nom = "7.1"
derive_more = { version = "1", features = ["add", "add_assign", "deref", "into", "mul"] }
serde = { version  = "1.0", optional = true }

[features]
default = []
